Expand the docs a bit

--- a/README
+++ b/README
@@ -21,10 +21,16 @@ SYNOPSIS
      }
 
 DESCRIPTION
-    This module takes care of running external programs for you. It manages
-    the wheels, reaps the child processes, and can kill programs after a
-    specified timeout if you want. It can also store context information for
-    programs.
+    If you need nonblocking access to an external program, or want to
+    execute some blocking code in a separate process, but you don't want to
+    write a wrapper module or some POE::Wheel::Run boilerplate code, then
+    POE::Quickie can help. You just specify what you're interested in
+    (stdout, stderr, and/or exit code), and POE::Quickie will handle the
+    rest in a sensible way.
+
+    It has some convenience features, such as killing processes after a
+    timeout, and storing process-specific context information which will be
+    delivered with every event.
 
 METHODS
   "new"
@@ -65,7 +71,9 @@ METHODS
     default.
 
     'Context' (optional), a variable which will be sent back to you with
-    every event.
+    every event. If you pass a reference, that same reference will be
+    delivered back to you later (not a copy), so you can update it as you
+    see fit.
 
     'WheelArgs' (optional), a hash reference of options which will be passed
     verbatim to the underlying POE::Wheel::Run object's constructor.
