--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+
+0.03  Thu Jun 24 01:33:27 GMT 2010
     - Fix a bug in the SYNOPSIS and improved the docs elsewhere as well
 
 0.02  Thu Jun 24 01:21:17 GMT 2010
