--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+
+0.06  Mon Jun 28 19:29:56 GMT 2010
     - Improve docs in a few places
     - Allow specifying a signal to killall()
 
