--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+
+0.07  Sat Jul 3 04:20:02 GMT 2010
     - Enable CloseOnCall on non-Win32 only instead of on Win32 only.
     - Make sure the testing dependencies go into build_requires
 
