--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+
+0.09  Mon Aug 2 09:42:54 GMT 2010
     - We were shutting down stdin too soon. Fixed and added a test for it.
 
 0.08  Mon Aug 2 09:19:37 GMT 2010
