--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+    - Change the API a bit to make it more of a singleton
 
 0.10  Tue Aug 17 22:55:26 GMT 2010
     - Make all warnings fatal
