--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for POE-Quickie
 
 {{$NEXT}}
     - Try to avoid a timing-related failure in the 04_timeout.t test
+    - Deliver StdoutEvent/StderrEvent/ExitEvent synchronously
 
 0.12  Sat Sep 25 07:57:23 GMT 2010
     - Made the docs more readable and added more links
