--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+
+0.14  Fri Apr 29 03:17:16 GMT 2011
     - Add a warning to the Pod about using the convenience functions in
       synchronous event handlers.
     - Add a ResultEvent to combine the best features of quickie() and run()
