--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+
+0.15  Thu May 19 16:14:53 GMT 2011
     - Change the order of arguments to ResultEvent to fit my sense of their
       order of importance
     - Events/functions which return the complete stdout/stderr will now
