--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+
+0.16  Sat May 21 01:16:52 GMT 2011
     - Add missing dependency on Test::Deep
     - Fix test failure in 09_resultevent.t
 
