--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+    - Fix another error in t/09_resultevent.t which was causing failures
 
 0.16  Sat May 21 01:16:52 GMT 2011
     - Add missing dependency on Test::Deep
